--- a/blog-single.html
+++ b/blog-single.html
@@ -21,7 +21,7 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!--Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
@@ -30,11 +30,9 @@
 
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
-      <div class="container d-flex align-items-center">
+      <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
   
         <h1 class="logo"><a href="index.html">DINAS SOSIAL</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
   
         <nav class="nav-menu d-none d-lg-block">
   
